# real_world_rust

./: Cargo.toml  README.md  install_testdata.py
src/: lib.rs
src/algorithms/iteration/: filter.rs  mod.rs  take.rs
src/algorithms/reduce/: fold.rs
src/algorithms/search/: max.rs
src/con_par/: channels.rs  mutex.rs
src/containers/: array.rs  iterator_custom.rs  iterators.rs  mod.rs  slices.rs  tuples.rs
src/containers/singly_linkedlist/: v3.rs  v5.rs
src/data_munging/file_io/: write_to_file.rs
src/data_munging/json/: serialization.rs
src/data_munging/std_io/: stdout.rs
src/data_munging/strings/: char_change_case.rs  convertion.rs  mod.rs
src/fp/: README.md  mod.rs
src/fp/generics/: intro.rs
src/fp/monads/: demo.rs
src/fp/types/: alias.rs  mod.rs  sumtype.rs
src/lib/: lib.rs
src/lib/algorithms/: mod.rs  numerics.rs
src/lib/con_par/: README.md  channels.rs  mod.rs  mutex.rs  rayon_simple.rs  thread.rs  thread_pool.rs
src/lib/containers/: array.rs  bit_fields.rs  hashmap.rs  linkedlist.rs  mod.rs  slab.rs  slices.rs  tuples.rs  vectors.rs
src/lib/data_munging/: mod.rs
src/lib/fp/: lambda.rs  maybe.rs  mod.rs  pattern_match.rs  result_option_types.rs
src/lib/memory_model/: boxed.rs  clone_on_write.rs  copy_clone.rs  global_unsafe.rs  internal_mutability_pattern.rs  lazy_static_objects.rs  (+8 more)
src/memory_model/: boxed.rs  copy_clone.rs  mod.rs  raii.rs  rc.rs  ref_counter.rs
src/performance/: memoization.rs
src/system_programming/: README.md  mod.rs
testdata/: ft.json  init_sqlite3_users_db.sh  simple.csv  users.db
tests/: iter.rs
(+174 files in other folders)
